[package]
name = "docker-client-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
[dependencies.chrono]
version = "0.4"
features = ["default", "serde"]
[dependencies.futures]
version = "0.3"
[dependencies.futures-core]
version = "0.3"
[dependencies.serde]
version = "1"
features = ["derive"]
[dependencies.serde_with]
version = "1"
[dependencies.serde_json]
version = "1"
[dependencies.serde_qs]
version = "0.9"
[dependencies.serde_urlencoded]
version = "0.7"
[dependencies.tokio]
version = "1"
features = ["full"]
[dependencies.hyper]
version = "0.14"
features = ["full"]
[dependencies.hyperlocal]
version = "0.8"
[dependencies.pretty]
version = "0.11"
[dependencies.colour]
version = "0.6"
[dependencies.url]
version = "2"
[dependencies.structmap]
version = "0.1"
[dependencies.structmap-derive]
version = "0.1"
[dev-dependencies.doc-comment]
version = "0.3"




